# Touch

./: CMakeLists.txt  Touch.qmlproject  Touch.qmlproject.qtds  main.qml  qmlmodules  qtquickcontrols2.conf  res.qrc
android/: AndroidManifest.xml
android/res/drawable/: splashscreen.xml  splashscreen_land.xml  splashscreen_port.xml
content/: App.qml  Background.qml  Base.qml  CMakeLists.txt  ConfigSelect.qml  Connect.qml  Content.qml  ContentColumn.qml  ContentH.qml  ContentRow.qml  Crestron.qml  Global.qml  Main.qml  crestroncip.js  resources.qrc  ws.js
content/Config/: ConfigSet.qml  Haishi410.qml  MediaPlayer.qml  ShiyiMZ.qml
content/Custom/: Background.qml  Category.qml  ColorButton.qml  ColorSwitch.qml  ControlPad.qml  DPad.qml  IconButton.qml  IconLabel.qml  InputButton.qml  InputButton2.qml  Light.qml  LightButton.qml  LightSwitch.qml  MyButton.qml  MyDelayButton.qml  MyIconLabel.qml  MyLable.qml  MyRoundButton.qml  MySwitch.qml  MyTabButton.qml  Output.qml  VButton.qml  VolumeBar.qml
content/Pages/: Camera.qml  Camera.ui.qml  Config.qml  ConfigModel.qml  ConfigSelect.qml  Connect.qml  ContentColumn.qml  ContentRow.qml  DataList.qml  FontList.qml  Light.qml  Light.ui.qml  ShiyiMZ.qml  System.qml  System.ui.qml  Test.qml  Test1.ui.qml  Test2.ui.qml  Test3.ui.qml  Test4.ui.qml  Test5.ui.qml  TestModel.qml  TitleBar.qml  Video.qml  Video.ui.qml  Volume.qml  Volume.ui.qml
content/Pages/Haishi/: Camera.qml  LED.qml  Remote.qml  SingleScreen.qml  VR.qml
content/Pages/Mediaplayer/: Flash.qml  MedaiCamera.qml  MediaSystem.qml  Movie.qml  PPT.qml  Picture.qml  Sound.qml  System.qml  Web.qml
content/Pages/Shiyi/: Camera.qml  CameraControl.qml  Light.qml  Power.qml  System.qml  Video.qml  Volume.qml
content/dialog/: ConfirmDialog.qml  MsgDialog.qml  PasswordDialog.qml  ProcessDialog.qml  SettingDialog.qml  VolumeDialog.qml
content/js/: crestroncip.js
content/webSocket/: WSClient.qml  WSServer.qml
imports/: CMakeLists.txt
imports/Touch/: CMakeLists.txt  qmldir
imports/Touch/designer/: plugin.metainfo
src/: TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  crestroncip.cpp  crestroncip.h  icon.rc  import_qml_plugins.h  main.cpp
